syntax = "proto3";

option csharp_namespace = "Comprehensive.gRPC";

package Events;

service EventsS {
  rpc CreateEvent (CreateEventRequest) returns (CreateEventReply);
  rpc GetEvent (GetEventRequest) returns (EventsModel);
}

// Models

message EventsModel
{
	int64 eventId = 1;
	string eventName = 2;
	string eventDate = 3;
	string eventAddress = 4;
	bool isValid = 5;
}



// requests / replies

message GetEventRequest
{
	string eventId = 1;
}

message CreateEventRequest {
  string eventId = 1;
}


message CreateEventReply {
  string eventId = 1;
}
